--- a/fusepb/xibs/MainMenu.xib
+++ b/fusepb/xibs/MainMenu.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -318,6 +319,12 @@
                                 <connections>
                                     <action selector="joystick_keyboard:" target="346" id="967"/>
                                     <binding destination="922" name="value" keyPath="values.keyboard" id="966"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Use Recreated ZX Spectrum keyboard" keyEquivalent="r" id="fmf-63-FJ7">
+                                <connections>
+                                    <action selector="keyboard_recreated:" target="346" id="aCs-o3-Wa2"/>
+                                    <binding destination="922" name="value" keyPath="values.recreatedspectrum" id="7uO-2R-eYf"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="eIS-Nr-x4v"/>
