--- a/fusepb/xibs/MainMenu.xib
+++ b/fusepb/xibs/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
@@ -321,7 +321,14 @@
                                     <binding destination="922" name="value" keyPath="values.keyboard" id="966"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Use Recreated ZX Spectrum keyboard" keyEquivalent="r" id="fmf-63-FJ7">
+                            <menuItem title="Use Shift with Arrow Keys" id="HVD-iV-22Y">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="keyboard_arrows_shifted:" target="346" id="Btx-5l-QE4"/>
+                                    <binding destination="922" name="value" keyPath="values.keyboardarrowsshifted" id="FsZ-Zf-OOq"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Use Recreated ZX Spectrum Keyboard" keyEquivalent="r" id="fmf-63-FJ7">
                                 <connections>
                                     <action selector="keyboard_recreated:" target="346" id="aCs-o3-Wa2"/>
                                     <binding destination="922" name="value" keyPath="values.recreatedspectrum" id="7uO-2R-eYf"/>
