--- a/fusepb/xibs/MainMenu.xib
+++ b/fusepb/xibs/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12121"/>
@@ -613,7 +613,7 @@
                                     </items>
                                 </menu>
                             </menuItem>
-                            <menuItem title="IDE Slave" id="1093">
+                            <menuItem title="IDE Slave" tag="42" id="1093">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="IDE Slave" id="1094">
                                     <items>
