--- a/fusepb/xibs/MainMenu.xib
+++ b/fusepb/xibs/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12121"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -284,7 +284,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="1015"/>
-                            <menuItem title="Debugger" id="458">
+                            <menuItem title="Debugger" tag="176" id="458">
                                 <connections>
                                     <action selector="cocoa_break:" target="346" id="466"/>
                                 </connections>
@@ -693,11 +693,13 @@
                     </menu>
                 </menuItem>
             </items>
+            <point key="canvasLocation" x="140" y="154"/>
         </menu>
         <customObject id="253" userLabel="Font Manager" customClass="NSFontManager"/>
         <customObject id="346" userLabel="FuseController" customClass="FuseController">
             <connections>
                 <outlet property="cartridge" destination="1118" id="1154"/>
+                <outlet property="debugger" destination="458" id="nBi-4W-qG3"/>
                 <outlet property="diskA" destination="1078" id="1150"/>
                 <outlet property="diskB" destination="1081" id="1151"/>
                 <outlet property="diskFlipA" destination="1099" id="1157"/>
@@ -721,13 +723,13 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="496" y="324" width="320" height="240"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="900"/>
             <value key="minSize" type="size" width="213" height="107"/>
             <view key="contentView" id="878">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView id="879" customClass="DisplayOpenGLView">
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="879" customClass="DisplayOpenGLView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </customView>
