--- a/fusepb/xibs/MainMenu.xib
+++ b/fusepb/xibs/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,10 +15,10 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <menu title="SDLMain" systemMenu="main" id="29" userLabel="MainMenu">
             <items>
-                <menuItem title="Fuse" id="56">
-                    <menu key="submenu" title="Fuse" systemMenu="apple" id="57">
+                <menuItem title="FuseX" id="56">
+                    <menu key="submenu" title="FuseX" systemMenu="apple" id="57">
                         <items>
-                            <menuItem title="About Fuse" id="58">
+                            <menuItem title="About FuseX" id="58">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-2" id="142"/>
@@ -35,7 +35,7 @@
                             <menuItem isSeparatorItem="YES" id="829">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                             </menuItem>
-                            <menuItem title="Hide Fuse" keyEquivalent="h" id="134">
+                            <menuItem title="Hide FuseX" keyEquivalent="h" id="134">
                                 <connections>
                                     <action selector="hide:" target="346" id="931"/>
                                 </connections>
@@ -53,7 +53,7 @@
                             <menuItem isSeparatorItem="YES" id="149">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                             </menuItem>
-                            <menuItem title="Quit Fuse" keyEquivalent="q" id="136">
+                            <menuItem title="Quit FuseX" keyEquivalent="q" id="136">
                                 <connections>
                                     <action selector="quit:" target="346" id="927"/>
                                 </connections>
@@ -679,7 +679,7 @@
                 <menuItem title="Help" id="103">
                     <menu key="submenu" title="Help" id="106">
                         <items>
-                            <menuItem title="Fuse Help" keyEquivalent="?" id="111">
+                            <menuItem title="FuseX Help" keyEquivalent="?" id="111">
                                 <connections>
                                     <action selector="help:" target="346" id="930"/>
                                 </connections>
@@ -739,6 +739,7 @@
                 <outlet property="delegate" destination="879" id="886"/>
                 <outlet property="initialFirstResponder" destination="879" id="882"/>
             </connections>
+            <point key="canvasLocation" x="163" y="375"/>
         </window>
         <userDefaultsController representsSharedInstance="YES" id="922" userLabel="Shared Defaults"/>
     </objects>
