--- a/fusepb/xibs/Preferences.xib
+++ b/fusepb/xibs/Preferences.xib
@@ -34,11 +34,11 @@
         <window title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="5" userLabel="Preferences" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="24" y="202" width="807" height="403"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1728" height="1079"/>
+            <rect key="contentRect" x="24" y="202" width="829" height="403"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1728" height="1085"/>
             <value key="minSize" type="size" width="213" height="107"/>
             <view key="contentView" id="6">
-                <rect key="frame" x="0.0" y="0.0" width="807" height="403"/>
+                <rect key="frame" x="0.0" y="0.0" width="829" height="403"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             </view>
             <toolbar key="toolbar" implicitIdentifier="2B5EC7EB-5A6C-4F96-8405-91E5B21A019C" allowsUserCustomization="NO" showsBaselineSeparator="NO" displayMode="iconAndLabel" sizeMode="regular" id="1279">
@@ -126,7 +126,7 @@
                 <outlet property="delegate" destination="-2" id="504"/>
                 <outlet property="initialFirstResponder" destination="6" id="1305"/>
             </connections>
-            <point key="canvasLocation" x="-451.5" y="133.5"/>
+            <point key="canvasLocation" x="-440.5" y="133.5"/>
         </window>
         <customView id="1347" userLabel="General">
             <rect key="frame" x="0.0" y="0.0" width="800" height="299"/>
@@ -374,20 +374,20 @@
             <point key="canvasLocation" x="114" y="472.5"/>
         </customView>
         <customView id="jPf-Ep-YVP" userLabel="Debugger">
-            <rect key="frame" x="0.0" y="0.0" width="800" height="86"/>
+            <rect key="frame" x="0.0" y="0.0" width="612" height="104"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="piz-aJ-Ran">
-                    <rect key="frame" x="78" y="34" width="112" height="17"/>
+                    <rect key="frame" x="171" y="30" width="111" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="gdbserver port:" id="nLC-iB-vmm">
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Debugger port:" id="nLC-iB-vmm">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eZA-S8-IU4">
-                    <rect key="frame" x="182" y="32" width="215" height="22"/>
+                    <rect key="frame" x="270" y="28" width="170" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="fK9-QT-Ywo">
                         <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="309" maximumFractionDigits="3" id="cVi-iS-b2v" customClass="NumberFormatter">
@@ -403,9 +403,9 @@
                     </connections>
                 </textField>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eRR-Dp-5uJ">
-                    <rect key="frame" x="403" y="34" width="318" height="18"/>
+                    <rect key="frame" x="73" y="67" width="464" height="18"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <buttonCell key="cell" type="check" title="Enable gdbserver (will disable regular Debugger)" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="WUN-l9-b03">
+                    <buttonCell key="cell" type="check" title="Enable advanced (gdbserver) debugger (will disable regular Debugger)" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="WUN-l9-b03">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -414,7 +414,7 @@
                     </connections>
                 </button>
             </subviews>
-            <point key="canvasLocation" x="-652" y="489"/>
+            <point key="canvasLocation" x="-746" y="498"/>
         </customView>
         <customView id="1408" userLabel="Sound">
             <rect key="frame" x="0.0" y="0.0" width="800" height="272"/>
@@ -1440,7 +1440,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <clipView key="contentView" id="7ih-tq-3PK">
                         <rect key="frame" x="1" y="1" width="135" height="301"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" headerView="1612" id="1615">
                                 <rect key="frame" x="0.0" y="0.0" width="135" height="284"/>
@@ -1545,7 +1545,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <clipView key="contentView" id="RVo-Sg-mDk">
                         <rect key="frame" x="1" y="1" width="135" height="320"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" headerView="1631" id="1634">
                                 <rect key="frame" x="0.0" y="0.0" width="135" height="303"/>
